<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">普拉星球</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">暂无更新</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">已无更多数据</string>
    <string name="title_activity_jing_xuan_details">JingXuanDetailsActivity</string>
    <!-- 注册 -->
    <string name="register_tip">我们向您承诺不会公开或透露您的个人资料,尊重您的隐私。</string>
    <string name="more">更多</string>
    <string name="sm_item_demo">接口</string>
    <string name="sm_item_auth">授权</string>
    <string name="sm_item_wechat">微信</string>
    <string name="sm_item_yixin">易信</string>
    <string name="sm_item_customer">自定义接口</string>
    <string name="sm_item_fl_weibo">关注新浪微博</string>
    <string name="sm_item_fl_tc">关注腾讯微博</string>
    <string name="sm_item_share_view">摇一摇截屏分享</string>
    <string name="sm_item_visit_website">关注官方网站</string>
    <string name="sm_item_about">Demo版本 Ver. %s</string>
    <string name="plz_choose_wechat">请选择微信客户端完成操作</string>
    <string name="get_token_format">获取%s的AccessToken</string>
    <string name="get_user_info_format">获取%s授权用户资料</string>
    <string name="get_other_info_format">获取%s其他用户资料</string>
    <string name="share_to_format">分享到%s</string>
    <string name="demo_share_all_gui">分享全部（有分享界面）</string>
    <string name="demo_share_all">分享全部（无界面，直接分享）</string>
    <string name="demo_get_access_token">获取AccessToken</string>
    <string name="demo_get_my_info">获取授权用户资料</string>
    <string name="demo_get_other_info">获取其他用户资料</string>
    <string name="get_sina_friends_list">获取新浪微博关注列表</string>
    <string name="get_tencent_friends_list">获取腾讯微博关注列表</string>
    <string name="customer_douban">搜索用户</string>
    <string name="customer_facebook">获取通知列表</string>
    <string name="customer_nemb">获取推荐话题</string>
    <string name="customer_renren">上传照片到用户的相册</string>
    <string name="customer_sina">获取微博主页列表</string>
    <string name="customer_qzone">发表日志到QQ空间</string>
    <string name="customer_tencent">获取我的粉丝列表</string>
    <string name="customer_twitter">获取主页列表</string>
    <string name="customer_kaixin">获取可能认识的人</string>
    <string name="customer_sohu">获取好友列表</string>
    <string name="customer_youdao">获取笔记本列表</string>
    <string name="customer_suishenkan">获取搜狐随身看书签列表</string>
    <string name="customer_tumblr">获取Tumblr用户Post列表</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @Mob移动开发者服务平台</string>
    <string name="share_content_short">ShareSDK不仅集成简单、支持如微信、新浪微博、腾讯微博等平台，还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://mob.com @Mob移动开发者服务平台</string>
    <string name="evenote_title">ShareSDK是一个神奇的SDK</string>
    <string name="update">文字分享</string>
    <string name="image_upload">图片分享（本地图片）</string>
    <string name="image_upload_bitmap">图片分享（Bitmap对象）</string>
    <string name="image_upload_url">图片分享（网络图片）</string>
    <string name="emoji_upload">表情分享（本地图片）</string>
    <string name="emoji_upload_url">表情分享（网络图片）</string>
    <string name="emoji_upload_bm">表情分享（Bitmap对象）</string>
    <string name="music_upload">音乐分享</string>
    <string name="video_upload">视频分享</string>
    <string name="webpage_upload">网页分享（本地图片）</string>
    <string name="webpage_upload_bitmap">网页分享（Bitmap对象）</string>
    <string name="webpage_upload_url">网页分享（网络图片）</string>
    <string name="app_upload">应用分享（携带文件）</string>
    <string name="app_upload_extinfo">应用分享（携带脚本）</string>
    <string name="file_upload">文件分享</string>
    <string name="share_to_wechat">微信好友</string>
    <string name="share_to_moment">微信朋友圈</string>
    <string name="share_to_favorite">微信收藏</string>
    <string name="wechat_demo_title">微信分享Demo标题</string>
    <string name="qzone_add_blog_sample"><h1>QQ互联</h1><font color="red">轻松分享,</font><font color="green">快乐生活。</font><a href="http://connect.qq.com">详情请看。</a><img src="http://imgcache.qq.com/ptlogin/head/1_100.gif"></img></string>
    <string name="wechat_client_is_not_installed_correctly">微信客户端未安装或版本太旧</string>
    <string name="wechat_client_not_support_following_operation">微信客户端不支持第三方应用执行关注功能</string>
    <string name="share_to_yixin">易信好友</string>
    <string name="share_to_yixin_moment">易信朋友圈</string>
    <string name="share_to_yixin_favorite">易信收藏</string>
    <string name="yixin_demo_title">易信分享Demo标题</string>
    <string name="receive_rewards">恭喜你得到%s个金币！</string>
    <string name="buy_success">购买成功</string>
    <string name="buy_failed">购买失败</string>
    <string name="laiwang">来往</string>
    <string name="qzone_customer_share_style">自定义QQ空间分享风格</string>
    <string name="qq_share_way">请选择分享方式</string>
    <string name="qq_share_from_qqlogin">QQ/QZone登录发微博</string>
    <string name="qq_share_from_tlogin">腾讯微博登录发微博</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_zhuanti_detail">ZhuantiDetailActivity</string>
    <string name="title_activity_zhuanti_detail_image">ZhuantiDetailImageActivity</string>
    <string name="title_activity_huodong_detail">HuodongDetailActivity</string>
    <string name="title_activity_booking">预约听课</string>
    <string name="tx_3_title">你好，你已登录</string>
    <string name="tx_3_introduce">欢 迎 来 到 普 拉 星 球</string>
    <string name="nul" />
    <string name="tx_name">用户名</string>
    <string name="tx_3">账户设置</string>
    <string name="tx_balance">余额</string>
    <string name="user_info">我的个人信息</string>
    <string name="updating">更新于：</string>
    <string name="tx_introduce">介绍</string>
    <string name="msg_login_error">用户未登录 或 密码错误</string>
    <string name="course_name">课程:</string>
    <string name="branch_name">分部:</string>   
    <string name="available_period">有效期:</string>
    
    <string name="basic_info_chn">基本信息</string>
    <string name="basic_info_eng">Basic information</string>
   
    <string name="my_notice_chn">我的活动</string>
    <string name="my_notice_eng">My activities</string>
    
    <string name="my_course_chn">我的课程</string>
    <string name="my_course_eng">My course</string>
    
    <string name="my_booking_chn">我的预约</string>
    <string name="my_booking_eng">My reservation</string>
    
    <string name="my_work_chn">我的工作</string>
    <string name="my_work_eng">My work</string>
    
   
    <string name="user_no">编号</string>
    <string name="user_name">姓名</string>
    <string name="user_gender">性别</string>
    <string name="user_parnet_name">家长姓名</string>     
    <string name="user_mobile">联系电话</string>
    <string name="user_address">家庭地址</string>
    <string name="user_card_no">学员卡号</string>
   
   
    <string name="progress_buy_out_status">购买使用: </string>
    <string name="progress_gongfang_used">工坊使用: </string>
    <string name="progress_huodong_used">活动使用: </string>
    
    <string name="course_duration_time">时长(分钟):</string>
    <string name="course_open_time">开课时间:</string>
    <string name="prevMonth">上一个月</string>
    <string name="nextMonth">下一个月</string>
    <string name="booking_plan">预约时间:</string>
    
    <string name="point_add_del">积分增减:</string>
    <string name="point_type">积分类型:</string>
    <string name="point_comments">积分备注:</string>   
    <string name="create_time">创建时间:</string>
    
    <string name="booking">预约</string>
    
    
	<!-- 星期 -->
	<string name="Mon">一</string>
	<string name="Tue">二</string>
	<string name="Wed">三</string>
	<string name="Thu">四</string>
	<string name="Fri">五</string>
	<string name="Sat">六</string>
	<string name="Sun">日</string>
	
</resources>
