<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/img_p"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_centerVertical ="true"
        android:contentDescription="@string/nul"
        android:src="@drawable/pula_logo_rec" />

    <TextView
        android:id="@+id/text_course_name"
        style="@style/Stylewidthhight_ww"
        android:layout_toRightOf="@+id/img_p"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/course_name"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tx_course_name"
        style="@style/Stylewidthhight_ww"
        android:layout_toRightOf="@+id/text_course_name"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/nul"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_branch_name"
        style="@style/Stylewidthhight_ww"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/tx_course_name"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/branch_name"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tx_branch_name"
        style="@style/Stylewidthhight_ww"
        android:layout_toRightOf="@+id/text_branch_name"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/nul"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_course_duraion_name"
        style="@style/Stylewidthhight_ww"
        android:layout_below="@+id/text_branch_name"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/img_p"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/course_duration_time"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tx_course_duraion_name"
        style="@style/Stylewidthhight_ww"
        android:layout_below="@+id/text_branch_name"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/text_course_duraion_name"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/nul"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_course_open_time"
        style="@style/Stylewidthhight_ww"
        android:layout_below="@+id/text_course_duraion_name"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/img_p"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/course_open_time"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tx_course_open_time"
        style="@style/Stylewidthhight_ww"
        android:layout_below="@+id/text_course_duraion_name"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/text_course_open_time"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/nul"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_available_period_name"
        style="@style/Stylewidthhight_ww"
        android:layout_below="@+id/text_course_open_time"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/img_p"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/available_period"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tx_available_period_name"
        style="@style/Stylewidthhight_ww"
        android:layout_below="@+id/text_course_open_time"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/text_available_period_name"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/nul"
        android:textColor="@color/black" />
    
     <TextView
        android:id="@+id/buy_used_name"
        style="@style/Stylewidthhight_ww"
        android:layout_below="@+id/text_available_period_name"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/img_p"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/progress_buy_out_status"
        android:textColor="@color/black" />

    <ProgressBar
        android:id="@+id/progressbar_buy_used"
        style="@style/tallerBarStyle"

        android:layout_toRightOf="@+id/buy_used_name"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/buy_used_name"
        android:layout_marginTop="3dp"
        android:layout_alignBottom="@+id/buy_used_name"
        android:layout_marginBottom="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="100"
        android:minWidth="120dip"
        android:focusable="false"
        android:progress="50"
        android:secondaryProgress="0" />
    
    
     <TextView
        android:id="@+id/huodong_used"
        style="@style/Stylewidthhight_ww"
        android:layout_below="@+id/buy_used_name"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/img_p"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/progress_huodong_used"
        android:textColor="@color/black" />

    <ProgressBar
        android:id="@+id/progressbar_huodong_used"
        style="@style/tallerBarStyle"

        android:layout_toRightOf="@+id/huodong_used"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/huodong_used"
        android:layout_marginTop="3dp"
        android:layout_alignBottom="@+id/huodong_used"
        android:layout_marginBottom="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="100"
        android:minWidth="120dip"
        android:progress="50"
        android:focusable="false"
        android:secondaryProgress="0" />
    
     <TextView
        android:id="@+id/gongfang_used"
        style="@style/Stylewidthhight_ww"
        android:layout_below="@+id/huodong_used"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/img_p"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/progress_gongfang_used"
        android:textColor="@color/black" />

    <ProgressBar
        android:id="@+id/progressbar_gongfang_used"
        style="@style/tallerBarStyle"

        android:layout_toRightOf="@+id/gongfang_used"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/gongfang_used"
        android:layout_marginTop="3dp"
        android:layout_alignBottom="@+id/gongfang_used"
        android:layout_marginBottom="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="100"
        android:minWidth="120dip"
        android:focusable="false"
        android:progress="50"
        android:secondaryProgress="0" />
    
       <ImageView
        android:id="@+id/course_image_click"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/nul"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/right_45"
        />
    

</RelativeLayout>