<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="80dp" >
    <ImageView
        android:id="@+id/img_p"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/nul"
        android:layout_marginLeft="5dp"
        android:src="@drawable/pula_logo_circle"
        />
    
	<TextView
	    android:id="@+id/text_course_name"
	    style="@style/Stylewidthhight_ww"
	    android:layout_toRightOf="@+id/img_p"
	    android:singleLine="true"
	    android:layout_marginTop="6dp"
		android:ellipsize="marquee"
		android:textColor="@color/black"
		android:marqueeRepeatLimit="marquee_forever"
	    android:text="@string/course_name"/>
	
	<TextView
	    android:id="@+id/tx_course_name"
	    style="@style/Stylewidthhight_ww"
	    android:layout_toRightOf="@+id/text_course_name"
	    android:layout_marginTop="6dp"
	    android:text="@string/nul"
	    android:singleLine="true"
		android:ellipsize="marquee"
		android:textColor="@color/black"
		android:marqueeRepeatLimit="marquee_forever"/>
	<!-- 	
	<TextView
	    android:id="@+id/text_branch_name"
	    style="@style/Stylewidthhight_ww"
	    android:layout_toRightOf="@+id/tx_course_name"
	    android:layout_marginLeft="10dp"
	    android:text="@string/branch_name"
	    android:singleLine="true"
		android:ellipsize="marquee"
		android:textColor="@color/black"
		android:marqueeRepeatLimit="marquee_forever"/>
	   
	<TextView
	    android:id="@+id/tx_branch_name"
	    style="@style/Stylewidthhight_ww"
	    android:layout_toRightOf="@+id/text_branch_name"
	    android:text="@string/nul"
	    android:singleLine="true"
		android:ellipsize="marquee"
		android:textColor="@color/black"
		android:marqueeRepeatLimit="marquee_forever"/>
	   	 -->
	<TextView
	    android:id="@+id/text_course_duraion_name"
	    style="@style/Stylewidthhight_ww"
	    android:layout_below="@+id/text_course_name"
	    android:layout_toRightOf="@+id/img_p"
	    android:layout_marginTop="5dp"
	    android:text="@string/course_duration_time"
	    android:singleLine="true"
		android:ellipsize="marquee"
		android:textColor="@color/black"
		android:marqueeRepeatLimit="marquee_forever"/>
	
    <TextView
	    android:id="@+id/tx_course_duraion_name"
	    style="@style/Stylewidthhight_ww"
	    android:layout_below="@+id/text_course_name"
	    android:layout_toRightOf="@+id/text_course_duraion_name"
	    android:layout_marginTop="5dp"
	    android:text="@string/nul"
	    android:singleLine="true"
		android:ellipsize="marquee"
		android:textColor="@color/black"
		android:marqueeRepeatLimit="marquee_forever"/>
	
  	<TextView
	    android:id="@+id/text_course_open_time"
	    style="@style/Stylewidthhight_ww"
	    android:layout_below="@+id/text_course_duraion_name"
	    android:layout_toRightOf="@+id/img_p"
	    android:layout_marginTop="5dp"
	    android:text="@string/course_open_time"
	    android:singleLine="true"
		android:ellipsize="marquee"
		android:textColor="@color/black"
		android:marqueeRepeatLimit="marquee_forever"/>
	
    <TextView
	    android:id="@+id/tx_course_open_time"
	    style="@style/Stylewidthhight_ww"
	    android:layout_toRightOf="@+id/text_course_open_time"
	    android:layout_below="@+id/text_course_duraion_name"
	    android:layout_marginTop="5dp"
	    android:text="@string/nul"
	    android:singleLine="true"
		android:ellipsize="marquee"
		android:textColor="@color/black"
		android:marqueeRepeatLimit="marquee_forever"/>
    <!-- 
	  	<TextView
	    android:id="@+id/text_available_period_name"
	    style="@style/Stylewidthhight_ww"
	    android:layout_below="@+id/text_course_open_time"
	    android:layout_toRightOf="@+id/img_p"
	    android:layout_marginTop="5dp"
	    android:text="@string/available_period"
	    android:singleLine="true"
		android:ellipsize="marquee"
		android:textColor="@color/black"
		android:marqueeRepeatLimit="marquee_forever"/>
	
    <TextView
	    android:id="@+id/tx_available_period_name"
	    style="@style/Stylewidthhight_ww"
	    android:layout_below="@+id/text_course_open_time"
	    android:layout_toRightOf="@+id/text_available_period_name"
	    android:layout_marginTop="5dp"
	    android:text="@string/nul"
	    android:singleLine="true"
		android:ellipsize="marquee"
		android:textColor="@color/black"
		android:marqueeRepeatLimit="marquee_forever"/>
     -->
		<!--  
        <Button
        android:id="@+id/button"
        android:layout_below="@+id/img_p"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"        
        android:background="@color/aliceblue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:radius="20.0px"
        android:text="@string/booking" /> 
         -->
          
</RelativeLayout>